@@ -1,3 +1,9 @@
+2012-07-23  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/js/gnuplot_mouse.js (mouse_update):  Allow for the possibility
+	of mapping the x2 and y2 axis coordinates through plot-specific mapping
+	functions gnuplot.x2_mapping(), gnuplot.y2_mapping() defined elsewhere.
+
 2012-07-18  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/standard.c (f_acos): acos(x) was returning the complex conjugate
